# Kings_League_France_Predictions

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: 24-25_S1_J6.toml  25-26_S1_J1.toml  25-26_S1_J2.toml  25-26_S1_J3.toml
kings_league/: __init__.py  __main__.py  cli.py  config.py  deterministic.py  exhaustive.py  monte_carlo.py  visualization.py
lib/: methode_deterministe.py  methode_exhaustive.py  methode_exhaustive_multiprocessing.py  methode_monte_carlo.py
result/: README.md  classement_kings_league_france_J4.csv  classement_kings_league_france_J6.csv
result/2024-2025/split_1/: J3.csv  J5.csv  J6.csv  README.md
result/2025-2026/split_1/: J1.csv  J2.csv  J3.csv  README.md
