[project]
name = "kings-league-france-predictions"
version = "0.1.0"
description = "Predicting the outcome of Kings League France matches"
authors = [
    { name = "Laidwin" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
