[build-system]
requires = [
    "setuptools>=61.0",
    "cython",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "kings-league-france-predictions"
version = "0.1.0"
description = "Predicting the outcome of Kings League France matches"
authors = [
    { name = "Laidwin" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=3.0.0",
    "pillow>=11.0.0",
    "seaborn>=0.13.2",
]

[tool.setuptools]
py-modules = []
