[project]
name = "kings-league-france-predictions"
version = "1.0.0"
description = "Predicting the outcome of Kings League France matches"
authors = [{ name = "Laidwin" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=3.0.0",
    "pillow>=11.0.0",
    "seaborn>=0.13.2",
]

[project.scripts]
kings-league-predict = "kings_league.cli:main"

[dependency-groups]
dev = ["ruff>=0.15.0"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.setuptools]
packages = ["kings_league"]
